--- a/catalog.html
+++ b/catalog.html
@@ -18,10 +18,10 @@
       </div>
       <nav class="main-nav  main-nav--closed">
         <ul class="main-nav__list">
-          <li class="main-nav__item  main-nav__item--active"><a href="catalog.html">Каталог товаров</a></li>
-          <li class="main-nav__item"><a href="form.html">Вязание на заказ</a></li>
-          <li class="main-nav__item  main-nav__item--search"><a href="#">Поиск по сайту</a></li>
-          <li class="main-nav__item  main-nav__item--basket"><a href="#">Корзина: пока пуста</a></li>
+          <li class="main-nav__item  main-nav__item--active"><a class="main-nav__link" href="catalog.html">Каталог товаров</a></li>
+          <li class="main-nav__item"><a class="main-nav__link" href="form.html">Вязание на заказ</a></li>
+          <li class="main-nav__item  main-nav__item--search"><a class="main-nav__link" href="#">Поиск по сайту</a></li>
+          <li class="main-nav__item  main-nav__item--basket"><a class="main-nav__link" href="#">Корзина: пока пуста</a></li>
         </ul>
       </nav>
     </header>
