--- a/catalog.html
+++ b/catalog.html
@@ -33,39 +33,49 @@
       <div class="catalog__wrapper">
         <article class="catalog-item">
           <a class="catalog-item__image" href="#"><img src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Зайчик"></a>
-          <h1 class="catalog-item__title"><a href="#">Зайчик-попрыгайчик</a></h1>
-          <span>Рост 30 см, вес 200 г</span>
-          <div class="catalog-item__buy">
-            <span class="catalog-item__price">1200 руб.</span>
-            <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+          <div class="catalog-item__wrapper">
+            <a href="#"><h1 class="catalog-item__title" >Зайчик-попрыгайчик</h1></a>
+            <span>Рост 30 см, вес 200 г</span>
+            <div class="catalog-item__buy">
+              <span class="catalog-item__price">1200 руб.</span>
+              <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+            </div>
           </div>
         </article>
         <article class="catalog-item">
           <a class="catalog-item__image" href="#"><img src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Корзинка"></a>
-          <h1 class="catalog-item__title"><a href="#">Корзинка для белья</a></h1>
-          <span>Диаметр 15 см, высота 10 см</span>
-          <div class="catalog-item__buy">
-            <span class="catalog-item__price">690 руб.</span>
-            <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+          <div class="catalog-item__wrapper">
+          <a href="#"><h1 class="catalog-item__title">Корзинка для белья</h1></a>
+            <span>Диаметр 15 см, высота 10 см</span>
+            <div class="catalog-item__buy">
+              <span class="catalog-item__price">690 руб.</span>
+              <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+            </div>
           </div>
         </article>
         <article class="catalog-item">
           <a class="catalog-item__image" href="#"><img src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка"></a>
-          <h1 class="catalog-item__title"><a href="#">Большая корзинка для игрушек</a></h1>
-          <span>Диаметр 30 см, высота 30 см</span>
-          <div class="catalog-item__buy">
-            <span class="catalog-item__price">1500 руб.</span>
-            <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+          <div class="catalog-item__wrapper">
+            <a href="#"><h1 class="catalog-item__title">Большая корзинка для игрушек</h1></a>
+            <span>Диаметр 30 см, высота 30 см</span>
+            <div class="catalog-item__buy">
+              <span class="catalog-item__price">1500 руб.</span>
+              <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
+            </div>
           </div>
         </article>
       </div>
     </section>
 
     <section class="manufacture">
-      <h2 class="manufacture__title  manufacture__title--camera">Процесс производства</h2>
+      <div class="manufacture__header">
+        <h2 class="manufacture__title  manufacture__title--camera">Процесс производства</h2>
+      </div>
       <img class="manufacture__video" src="img/video-mobile@1x.jpg" width="260" height="150" alt="Процесс производства">
-      <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-      <a class="manufacture__btn  btn" href="form.html">Сделать заказ</a>
+      <div class="manufacture__caption">
+        <p>По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+        <a class="manufacture__btn  btn" href="form.html">Сделать заказ</a>
+      </div>
     </section>
 
     <footer class="page-footer">
