--- a/index.html
+++ b/index.html
@@ -47,21 +47,23 @@
           <h2 class="featured__title">Вязаные корзинки</h2>
           <span class="featured__weekly">Товар недели</span>
         </div>
-        <p class="featured__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
-        <table class="featured__description">
-          <tr>
-            <td><span>Цвет:</span></td>
-            <td><span>«Тиффани»/серый</span></td>
-          </tr>
-          <tr>
-            <td><span>Диаметр:</span></td>
-            <td><span>25 см</span></td>
-          </tr>
-          <tr>
-            <td><span>Высота:</span></td>
-            <td><span>15 см</span></td>
-          </tr>
-        </table>
+        <div class="featured__info-block">
+          <p class="featured__info">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+          <table class="featured__description">
+            <tr>
+              <td><span>Цвет:</span></td>
+              <td><span>«Тиффани»/серый</span></td>
+            </tr>
+            <tr>
+              <td><span>Диаметр:</span></td>
+              <td><span>25 см</span></td>
+            </tr>
+            <tr>
+              <td><span>Высота:</span></td>
+              <td><span>15 см</span></td>
+            </tr>
+          </table>
+        </div>
         <img class="featured__image" src="img/triple-set-mobile@1x.jpg" width="260" height="315" alt="Вязаные корзинки">
         <div class="featured__buy">
           <span class="featured__price">Цена: 990 руб.</span>
@@ -106,15 +108,17 @@
         <div class="reviews__list">
           <blockquote class="reviews__item  slider__item">
             <p>Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-            <cite>
-              <span class="reviews__author-name">Анастасия Красильникова</span>
-              <a class="reviews__author-nickname" href="#">@misssssiskras</a>
-            </cite>
           </blockquote>
-        </div>
-        <div class="reviews__sliders-btn">
-          <button class="reviews__slider-btn  reviews__slider-btn--prev" type="button">Предыдущий отзыв</button>
-          <button class="reviews__slider-btn  reviews__slider-btn--next" type="button">Следующий отзыв</button>
+          <div class="reviews__list-slider">
+            <cite>
+                <span class="reviews__author-name">Анастасия Красильникова</span>
+                <a class="reviews__author-nickname" href="#">@misssssiskras</a>
+            </cite>
+            <div class="reviews__sliders-btn">
+              <button class="reviews__slider-btn  reviews__slider-btn--prev" type="button">Предыдущий отзыв</button>
+              <button class="reviews__slider-btn  reviews__slider-btn--next" type="button">Следующий отзыв</button>
+            </div>
+          </div>
         </div>
         <a class="reviews__btn  btn" href="#">Написать</a>
       </div>
@@ -123,16 +127,16 @@
     <section class="contacts">
       <div class="contacts__wrapper">
         <h2 class="contacts__title">Контакты</h2>
-        <table class="contacts__info">
-          <tr>
-            <td><span>e-mail:</span></td>
-            <td><a class="contacts__link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></td>
-          </tr>
-          <tr>
-            <td><span>адрес:</span></td>
-            <td class="contacts__address"><span>г. Санкт-Петербург, ул.&nbsp;Большая Конюшенная, д.&nbsp;19/8, офис&nbsp;101</span></td>
-          </tr>
-        </table>
+        <div class="contacts__info">
+          <div class="contacts__row">
+            <div class="contacts__cell"><span>e-mail:</span></div>
+            <div class="contacts__cell"><a class="contacts__link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></div>
+          </div>
+          <div class="contacts__row">
+            <div class="contacts__cell"><span>адрес:</span></div>
+            <div class="contacts__cell  contacts__address"><span>г. Санкт-Петербург, ул.&nbsp;Большая Конюшенная, д.&nbsp;19/8, офис&nbsp;101</span></div>
+          </div>
+        </div>
       </div>
       <div class="contacts__map">
         <img src="img/map-mobile@1x.jpg" width="320" height="457" alt="Карта">
@@ -144,6 +148,9 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
+        <div class="page-footer__logo-block">
+          <a class="page-footer__logo" href="index.html"><img width="105" height="38" src=""></a>
+        </div>
         <div class="social">
           <a class="social__link  social__link--in" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
           <a class="social__link  social__link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
@@ -161,12 +168,14 @@
           <h1 class="modal__title">Добавить в&nbsp;корзину</h1>
           <span class="modal__choose-size">Выберите размер:</span>
           <fieldset class="modal__size">
-            <input class="modal__radio" type="radio" name="size" id="size-s" value="size-s" checked>
-            <label class="modal__radio-label" for="size-s">S</label>
-            <input class="modal__radio" type="radio" name="size" id="size-m" value="size-m">
-            <label class="modal__radio-label" for="size-m">M</label>
-            <input class="modal__radio" type="radio" name="size" id="size-l" value="size-l">
-            <label class="modal__radio-label" for="size-l">L</label>
+            <div class="modal__field-size">
+              <input class="modal__radio" type="radio" name="size" id="size-s" value="size-s" checked>
+              <label class="modal__radio-label" for="size-s">S</label>
+              <input class="modal__radio" type="radio" name="size" id="size-m" value="size-m">
+              <label class="modal__radio-label" for="size-m">M</label>
+              <input class="modal__radio" type="radio" name="size" id="size-l" value="size-l">
+              <label class="modal__radio-label" for="size-l">L</label>
+            </div>
           </fieldset>
           <input class="modal__submit" type="submit" name="submit" value="Добавить">
         </form>
