--- a/catalog.html
+++ b/catalog.html
@@ -35,8 +35,10 @@
         <article class="catalog-item">
           <a class="catalog-item__image" href="#"><img src="img/photo-1-mobile@1x.jpg" width="260" height="195" alt="Зайчик"></a>
           <div class="catalog-item__wrapper">
-            <a href="#"><h1 class="catalog-item__title" >Зайчик-попрыгайчик</h1></a>
-            <span>Рост 30 см, вес 200 г</span>
+            <div class="catalog-item__info">
+              <a href="#"><h1 class="catalog-item__title" >Зайчик-попрыгайчик</h1></a>
+              <span>Рост 30 см, вес 200 г</span>
+            </div>
             <div class="catalog-item__buy">
               <span class="catalog-item__price">1200 руб.</span>
               <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
@@ -46,8 +48,10 @@
         <article class="catalog-item">
           <a class="catalog-item__image" href="#"><img src="img/photo-2-mobile@1x.jpg" width="260" height="195" alt="Корзинка"></a>
           <div class="catalog-item__wrapper">
-          <a href="#"><h1 class="catalog-item__title">Корзинка для белья</h1></a>
-            <span>Диаметр 15 см, высота 10 см</span>
+            <div class="catalog-item__info">
+              <a href="#"><h1 class="catalog-item__title">Корзинка для белья</h1></a>
+              <span>Диаметр 15 см, высота 10 см</span>
+            </div>
             <div class="catalog-item__buy">
               <span class="catalog-item__price">690 руб.</span>
               <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
@@ -57,8 +61,10 @@
         <article class="catalog-item">
           <a class="catalog-item__image" href="#"><img src="img/photo-3-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка"></a>
           <div class="catalog-item__wrapper">
-            <a href="#"><h1 class="catalog-item__title">Большая корзинка для игрушек</h1></a>
-            <span>Диаметр 30 см, высота 30 см</span>
+            <div class="catalog-item__info">
+              <a href="#"><h1 class="catalog-item__title">Большая корзинка для&nbsp;игрушек</h1></a>
+              <span>Диаметр 30 см, высота 30 см</span>
+            </div>
             <div class="catalog-item__buy">
               <span class="catalog-item__price">1500 руб.</span>
               <a class="catalog-item__basket  modal-btn" href="#">Добавить в корзину</a>
@@ -81,6 +87,9 @@
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
+        <div class="page-footer__logo-block">
+          <a class="page-footer__logo" href="index.html"><img width="105" height="38" src=""></a>
+        </div>
         <div class="social">
           <a class="social__link  social__link--in" href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a>
           <a class="social__link  social__link--fb" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
@@ -93,19 +102,23 @@
     </footer>
 
     <section class="modal">
-      <form class="modal__form" action="https://echo.htmlacademy.ru/" method="post">
-        <h1 class="modal__title">Добавить в корзину</h1>
-        <span class="modal__choose-size">Выберите размер:</span>
-        <fieldset class="modal__size">
-          <input class="modal__radio" type="radio" name="size" id="size-s" value="size-s" checked>
-          <label class="modal__radio-label" for="size-s">S</label>
-          <input class="modal__radio" type="radio" name="size" id="size-m" value="size-m">
-          <label class="modal__radio-label" for="size-m">M</label>
-          <input class="modal__radio" type="radio" name="size" id="size-l" value="size-l">
-          <label class="modal__radio-label" for="size-l">L</label>
-        </fieldset>
-        <input class="modal__submit" type="submit" name="submit" value="Добавить">
-      </form>
+      <div class="modal__wrapper">
+        <form class="modal__form" action="https://echo.htmlacademy.ru/" method="post">
+          <h1 class="modal__title">Добавить в&nbsp;корзину</h1>
+          <span class="modal__choose-size">Выберите размер:</span>
+          <fieldset class="modal__size">
+            <div class="modal__field-size">
+              <input class="modal__radio" type="radio" name="size" id="size-s" value="size-s" checked>
+              <label class="modal__radio-label" for="size-s">S</label>
+              <input class="modal__radio" type="radio" name="size" id="size-m" value="size-m">
+              <label class="modal__radio-label" for="size-m">M</label>
+              <input class="modal__radio" type="radio" name="size" id="size-l" value="size-l">
+              <label class="modal__radio-label" for="size-l">L</label>
+            </div>
+          </fieldset>
+          <input class="modal__submit" type="submit" name="submit" value="Добавить">
+        </form>
+      </div>
     </section>
 
     <div class="overlay"></div>
