--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section class="category">
       <div class="category__header">
-        <h1 class="category__title">Милые штучки ручной работы&nbsp;для&nbsp;дома</h1>
+        <h1 class="category__title">Милые штуки ручной работы&nbsp;для&nbsp;дома</h1>
       </div>
       <div class="category__wrapper">
         <div class="category__item  category__item--interior">
